feat: complete REST API for questions
